<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:text="@string/heading_element_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_element_centre" />

                <include
                    android:layout_gravity="right"
                    layout="@layout/listitem_point"
                    android:textAlignment="center" />
            </LinearLayout>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:text="@string/heading_element_colours" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_element_capcolour" />

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <View
                        android:id="@+id/element_capcolour_swatch"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical" />

                    <ImageButton
                        android:id="@+id/button_element_capcolour"
                        android:layout_width="40dip"
                        android:layout_height="40dip"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_vertical"
                        android:background="@color/action_bar"
                        android:contentDescription="@string/desc_colour_edit"
                        android:src="@drawable/ic_action_edit" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/label_element_bodycolour" />

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <View
                        android:id="@+id/element_bodycolour_swatch"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical" />

                    <ImageButton
                        android:id="@+id/button_element_bodycolour"
                        android:layout_width="40dip"
                        android:layout_height="40dip"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="center_vertical"
                        android:background="@color/action_bar"
                        android:contentDescription="@string/desc_colour_edit"
                        android:src="@drawable/ic_action_edit" />
                </RelativeLayout>
            </LinearLayout>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:text="@string/heading_element_proportions" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_element_height" />

                <EditText
                    android:id="@+id/edit_element_height"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_element_radius" />

                <EditText
                    android:id="@+id/edit_element_radius"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:text="@string/heading_element_parameters" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_element_rotation" />

                <EditText
                    android:id="@+id/edit_element_rotation"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="?android:attr/textAppearanceMedium"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/label_element_stepcount" />

                <EditText
                    android:id="@+id/edit_element_stepcount"
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include layout="@layout/component_buttonrow" />

</LinearLayout>